ingresss files/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  sample-app-ingress
  labels:
    app: sample-app-ingress
