ingresss files/deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms2-deployment
  namespace: sample-app-ingress
  labels:
    app: ms2 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms2
  template:
    metadata:
      labels:
        app: ms2
    spec:
      containers:
        - name: ms2
          image: "hashicorp/http-echo:1.0"
          ports:
            - containerPort: 5678
          args:
            - "-text=hello world from ms2"
