ingresss files/service-2.yml
apiVersion: v1
kind: Service 
metadata:
  name: ms2-service
  namespace: sample-app-ingress
  labels:
    app: ms2 
spec:
  type: ClusterIP
  selector:
    app: ms2
  ports:
    - name: http
      port: 80
      targetPort: 5678
